# fhedb

./: .gitignore  Cargo.toml  LICENSE  README.md
fhedb-core/: Cargo.toml
fhedb-core/src/: document.rs  lib.rs  prelude.rs  reference_utils.rs  schema.rs
fhedb-core/src/collection/: data.rs  file.rs  mod.rs
fhedb-core/src/database/: file.rs  mod.rs
fhedb-core/src/db/: collection.rs  collection_schema_ops.rs  database.rs  document.rs  mod.rs  reference_utils.rs  schema.rs
fhedb-core/src/file/: collection.rs  database.rs  logfile.rs  mod.rs  types.rs
fhedb-core/src/index/: mod.rs  node.rs  pager.rs  tree.rs
fhedb-core/src/metadata/: database.rs  mod.rs
fhedb-core/src/query/: compare.rs  condition.rs  filter.rs  mod.rs  prepare.rs  reference.rs  select.rs  value.rs
fhedb-core/tests/: common.rs  test_collection.rs  test_collection_compaction.rs  test_collection_files.rs  test_collection_int.rs  test_collection_logs.rs  test_collection_metadata.rs  test_collection_string.rs  test_database.rs  test_document.rs  test_logfile.rs  test_reference_utils.rs  test_schema.rs
fhedb-core/tests/collection/: compaction.rs  core.rs  files.rs  id_integer.rs  id_string.rs  logs.rs  metadata.rs  mod.rs  schema_ops.rs  test_collection.rs  test_collection_compaction.rs  test_collection_files.rs  test_collection_int.rs  test_collection_logs.rs  test_collection_metadata.rs  test_collection_schema.rs  test_collection_string.rs
fhedb-server/: Cargo.toml
fhedb-server/src/: extractor.rs  handlers.rs  lib.rs  logger.rs  main.rs  middleware.rs  response.rs  state.rs
(+137 files in other folders)
