[package]
name = "fhedb-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
fhedb-core = { path = "../fhedb-core" }
fhedb-query = { path = "../fhedb-query" }
dirs = "6.0.0"
serde = "1.0.228"
serde-saphyr = "0.0.10"
serde_json = "1.0.145"
log = "0.4.29"
fern = "0.7.1"
chrono = { version = "0.4.42", features = ["serde"] }
bson = { version = "3.1.0", features = ["serde"] }
